Fixed error; Made background visible for indexed/modified/issued dates

--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -685,7 +685,7 @@ section#main {
 					dd, dt {
 						display:inline-block;
 						font-size:0.9rem;
-						background:lighten($body-color, 75%);
+						background:lighten($body-color, 65%);
 						padding:.3rem;
 					}
 					dt {
